--- a/index.html
+++ b/index.html
@@ -5,26 +5,16 @@ title: Home
 <section class="c-archives">
 <h2 class="c-archives__year">Publication</h2>
 <ul class="c-archives__list">
-{% for post in site.posts  %}
-    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
-
-    {% if forloop.first %}
-        <h2 class="c-archives__year" id="{{ this_year }}-ref">{{this_year}}</h2>
-        <ul class="c-archives__list">
-    {% endif %}
-        <li class="c-archives__item">
-            <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
-            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
-        </li>
-    {% if forloop.last %}
-        </ul>
-    {% else %}
-        {% if this_year != next_year %}
-        </ul>
-        <h2 class="c-archives__year" id="{{ next_year }}-ref">{{next_year}}</h2>
-        <ul class="c-archives__list">
-        {% endif %}
-    {% endif %}
-{% endfor %}
+<li class="c-archives__item">
+    <p>Learning Reward for Robot Skills Using Large Language Models via
+    Self-Alignment </p>
+    <br><p><b>Yuwei Zeng</b>, Yao Mu, Lin Shao</p>
+    <br><p>ICML 2024</p>
+    <br><p>
+        <a href="https://openreview.net/pdf?id=Z19JQ6WFtJ">Paper</a><span class="u-separate"></span>
+        <a href="https://sites.google.com/view/rewardselfalign">Project</a><span class="u-separate"></span>
+        <a href=""https://github.com/friolero/self_aligned_reward_learning>Code</a><span class="u-separate"></span>
+    </p>
+<li>
+</ul>
 </section>
