--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
     <p>
         <a href="https://openreview.net/pdf?id=Z19JQ6WFtJ">Paper</a><span class="u-separate"></span>
         <a href="https://sites.google.com/view/rewardselfalign">Project</a><span class="u-separate"></span>
-        <a href=""https://github.com/friolero/self_aligned_reward_learning>Code</a><span class="u-separate"></span>
+        <a href="https://github.com/friolero/self_aligned_reward_learning">Code</a><span class="u-separate"></span>
     </p><br>
 <li>
 <li class="c-archives__item">
