--- a/index.html
+++ b/index.html
@@ -6,14 +6,7 @@ title: Home
 <h2 class="c-archives__year">Publication</h2>
 <ul class="c-archives__list">
 <li class="c-archives__item">
-    <p>Learning Reward for Robot Skills Using Large Language Models via Self-Alignment </p><br>
-    <p><b>Yuwei Zeng</b>, Yao Mu, Lin Shao</p><br>
-    <p>ICML 2024</p><br>
-    <p>
-        <a href="https://openreview.net/pdf?id=Z19JQ6WFtJ">Paper</a><span class="v-separate"></span>
-        <a href="https://sites.google.com/view/rewardselfalign">Project</a><span class="v-separate"></span>
-        <a href="https://github.com/friolero/self_aligned_reward_learning">Code</a>
-    </p><br>
+    <p>Learning Reward for Robot Skills Using Large Language Models via Self-Alignment<br><b>Yuwei Zeng</b>, Yao Mu, Lin Shao<br>ICML 2024<br><a href="https://openreview.net/pdf?id=Z19JQ6WFtJ">Paper</a><span class="v-separate"></span><a href="https://sites.google.com/view/rewardselfalign">Project</a><span class="v-separate"></span><a href="https://github.com/friolero/self_aligned_reward_learning">Code</a></p>
 <li>
 <li class="c-archives__item">
     <p> Diff-lfd: Contact-aware model-based learning from visual demonstration for robotic manipulation via differentiable physics-based simulation and rendering </p><br>
