--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ title: Home
 </ul>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Object Grasping and Lifting with KG-3 Gripper from Single Human Demonstration<br></p>
-        <a
+        <p style="color: black;">Object Grasping and Lifting with KG-3 Gripper from Single Human Demonstration<br><a
             href="https://drive.google.com/file/d/17Ult7o3O9O-b8rtlBymSOf7oyac_0wkz/view?usp=sharing">PDF</a><span class="v-separate"></span><a
             href="https://github.com/friolero/tulip/blob/main/examples/robots/transfer_grab_demo.py">Code</a><span class="v-separate"></span></p>
     <li>
@@ -42,8 +41,7 @@ title: Home
 
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Sampling, Optimization and Learning-based Motion Planning for 2D Navigation<br></p>
-        <a
+        <p style="color: black;">Sampling, Optimization and Learning-based Motion Planning for 2D Navigation<br><a
             href="https://github.com/friolero/cs5478_path_planning/blob/main/CS5478_final_report.pdf">PDF</a><span
             class="v-separate"></span><a
             href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a><span class="v-separate"></span></p>
