--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@ title: Home
         <p style="font-size:75%;">Bingyang Zhou, Haoyu Zhou, Tianhai Liang, Qiaojun Yu, Siheng Zhao, <b>Yuwei Zeng</b>, Jun Lv, Siyuan Luo, Qiancai Wang, Xinyuan Yu, Haonan Chen, Cewu Lu, Lin Shao<br>ICCV 2023<br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Zhou_ClothesNet_An_Information-Rich_3D_Garment_Model_Repository_with_Simulated_Clothes_ICCV_2023_paper.pdf">Paper</a><span class="v-separate"></span><a href="https://sites.google.com/view/clothesnet">Project</a><span class="v-separate"></span><a href="https://docs.google.com/forms/d/e/1FAIpQLSdE-cUxWSzvC-D99RqkIHI9yLHjvT_5QygszjfqxnB6vIt8vw/viewform">Dataset</a></p>
     <li>
 </ul>
+<br>
+<br>
 <h2 class="c-archives__year">Projects</h2>
 <ul class="c-archives__list">
     <li class="c-archives__item">
         <p style="color: black;">Template-based Single-view Cloth Shape Estimation with Data-driven Deformation Prediction and Differentiable Rendering<br></p> <a
             href="https://github.com/friolero/cs6244_cloth_shape_estimation/blob/main/final_report.pdf">PDF</a><span
-            class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a><span class="v-separate"></span></p>
+            class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a></p>
     <li>
 </ul>
 <ul class="c-archives__list">
     <li class="c-archives__item">
         <p style="color: black;">Object Grasping and Lifting with KG-3 Gripper from Single Human Demonstration<br><a
             href="https://drive.google.com/file/d/17Ult7o3O9O-b8rtlBymSOf7oyac_0wkz/view?usp=sharing">PDF</a><span class="v-separate"></span><a
-            href="https://github.com/friolero/tulip/blob/main/examples/robots/transfer_grab_demo.py">Code</a><span class="v-separate"></span></p>
+            href="https://github.com/friolero/tulip/blob/main/examples/robots/transfer_grab_demo.py">Code</a>
     <li>
 </ul>
 
@@ -44,7 +46,7 @@ title: Home
         <p style="color: black;">Sampling, Optimization and Learning-based Motion Planning for 2D Navigation<br><a
             href="https://github.com/friolero/cs5478_path_planning/blob/main/CS5478_final_report.pdf">PDF</a><span
             class="v-separate"></span><a
-            href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a><span class="v-separate"></span></p>
+            href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a>
     <li>
 </ul>
 
