--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Home
 <h2 class="c-archives__year">Projects</h2>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Template-based Single-view Cloth Shape Estimation with Data-driven Deformation Prediction and Differentiable Rendering<br></p> <a
+        <p style="color: black;">Template-based Single-view Cloth Shape Estimation with Data-driven Deformation Prediction and Differentiable Rendering<br><a
             href="https://github.com/friolero/cs6244_cloth_shape_estimation/blob/main/final_report.pdf">PDF</a><span
             class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a></p>
     <li>
