--- a/index.html
+++ b/index.html
@@ -28,25 +28,23 @@ title: Home
 <h2 class="c-archives__year">Projects</h2>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Template-based Single-view Cloth Shape Estimation with Data-driven Deformation Prediction and Differentiable Rendering<br><a
-            href="https://github.com/friolero/cs6244_cloth_shape_estimation/blob/main/final_report.pdf">PDF</a><span
-            class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a></p>
+        <p style="color: black;">Template-based Single-view Cloth Shape Estimation with Data-driven Deformation Prediction and Differentiable Rendering<br></p>
+        <p style="font-size:75%;">
+            <a href="https://github.com/friolero/cs6244_cloth_shape_estimation/blob/main/final_report.pdf">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a></p>
     <li>
 </ul>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Object Grasping and Lifting with KG-3 Gripper from Single Human Demonstration<br><a
-            href="https://drive.google.com/file/d/17Ult7o3O9O-b8rtlBymSOf7oyac_0wkz/view?usp=sharing">PDF</a><span class="v-separate"></span><a
-            href="https://github.com/friolero/tulip/blob/main/examples/robots/transfer_grab_demo.py">Code</a>
+        <p style="color: black;">Object Grasping and Lifting with KG-3 Gripper from Single Human Demonstration<br></p>
+        <p  style="font-size:75%;">
+            <a href="https://drive.google.com/file/d/17Ult7o3O9O-b8rtlBymSOf7oyac_0wkz/view?usp=sharing">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/tulip/blob/main/examples/robots/transfer_grab_demo.py">Code</a></p>
     <li>
 </ul>
-
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Sampling, Optimization and Learning-based Motion Planning for 2D Navigation<br><a
-            href="https://github.com/friolero/cs5478_path_planning/blob/main/CS5478_final_report.pdf">PDF</a><span
-            class="v-separate"></span><a
-            href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a>
+        <p style="color: black;">Sampling, Optimization and Learning-based Motion Planning for 2D Navigation<br></p>
+        <p style="font-size:75%;">
+            <a href="https://github.com/friolero/cs5478_path_planning/blob/main/CS5478_final_report.pdf">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a></p>
     <li>
 </ul>
 
