--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <h2 class="c-archives__year">About</h2>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-    <p style="color: balck;">
+    <p style="color: black;">
         Hi, I'm Yuwei, a CS PhD student at National University
         of Singapore.  My research is motivated by deploying robots into open-ended, 
         unstructured environments for general and timely assistance. In particular, 
