--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ title: Home
 </ul>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Sampling, Optimization and Learning-based Motion Planning for 2D Navigation<br></p>
+        <p style="color: black;">Sampling, Optimization and Diffusion-based Motion Planning for 2D Navigation<br></p>
         <p style="font-size:75%;">
             <a href="https://github.com/friolero/cs5478_path_planning/blob/main/CS5478_final_report.pdf">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a></p>
     <li>
