--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ title: Home
         interesting real-life deep learning solutions as an R&D engineer at 
         <a href="https://research.sg.panasonic.com/">Panasonic R&D Center
             Singapore</a>. Before that, 
-        I obtained my bachelor's degree from Nanyang Technological University, 
-        advised by <a href="https://microelectronics.tudelft.nl/People/bio.php?id=744">Prof Justin Dauwels</a>.
+        I obtained my bachelor's degree from Nanyang Technological University,
+        with my thesis supervised by <a href="https://microelectronics.tudelft.nl/People/bio.php?id=744">Prof Justin Dauwels</a>.
     </p>
     <li>
 </ul>
