--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
         <br>
         Previously, I worked on applied research in learning for robot manipulation at 
         <a href="https://www.youtube.com/watch?v=2Bh61aY8ncg">Dyson robotics
-            research</a>. where I was fortunate to have worked with a team of passionate 
+            research</a>, where I was fortunate to have worked with a team of passionate 
         roboticists and <a href="https://profiles.imperial.ac.uk/e.johns">Dr.
             Edward Johns</a>. I have also worked on a series of 
         interesting real-life deep learning solutions as an R&D engineer at 
@@ -59,7 +59,7 @@ title: Home
     <li class="c-archives__item">
         <p style="color: black;">Template-based Single-view Cloth Shape Estimation with Data-driven Deformation Prediction and Differentiable Rendering<br></p>
         <p style="font-size:75%;">
-            <a href="https://github.com/friolero/cs6244_cloth_shape_estimation/blob/main/final_report.pdf">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a></p>
+            <a href="https://drive.google.com/file/d/1yD12kPceUxEfWFQzrTz6WXyP5n_IpPAE/view?usp=drive_link">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a></p>
     <li>
 </ul>
 <ul class="c-archives__list">
@@ -73,7 +73,7 @@ title: Home
     <li class="c-archives__item">
         <p style="color: black;">Sampling, Optimization and Diffusion-based Motion Planning for 2D Navigation<br></p>
         <p style="font-size:75%;">
-            <a href="https://github.com/friolero/cs5478_path_planning/blob/main/CS5478_final_report.pdf">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a></p>
+            <a href="https://drive.google.com/file/d/15pugl4e622GVE814Wak4dJgszsedWJoi/view?usp=drive_link">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a></p>
     <li>
 </ul>
 
