--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Home
     <li>
     <br>
     <li class="c-archives__item">
-        <p style="color: black;"> Diff-lfd: Contact-aware model-based learning from visual demonstration for robotic manipulation via differentiable physics-based simulation and rendering<br></p>
+        <p style="color: black;"> Diff-lfd: Contact-Aware Model-Based Learning from Visual Demonstration for Robotic Manipulation via Differentiable Physics-Based Simulation and Rendering<br></p>
         <p style="font-size:75%;">Xinghao Zhu, JingHan Ke, Zhixuan Xu, Zhixin Sun, Bizhe Bai, Jun Lv, Qingtao Liu, <b>Yuwei Zeng</b>, Qi Ye, Cewu Lu, Masayoshi Tomizuka, Lin Shao<br>CoRL 2023 (Oral)<br><a href="https://proceedings.mlr.press/v229/zhu23a/zhu23a.pdf">Paper</a><span class="v-separate"></span><a href="https://sites.google.com/view/diff-lfd">Project</a></p>
     <li>
     <br>
@@ -57,7 +57,7 @@ title: Home
 <h2 class="c-archives__year">Projects</h2>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Template-based Single-view Cloth Shape Estimation with Data-driven Deformation Prediction and Differentiable Rendering<br></p>
+        <p style="color: black;">Template-Based Single-View Cloth Shape Estimation with Data-Driven Deformation Prediction and Differentiable Rendering<br></p>
         <p style="font-size:75%;">
             <a href="https://drive.google.com/file/d/1yD12kPceUxEfWFQzrTz6WXyP5n_IpPAE/view?usp=drive_link">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs6244_cloth_shape_estimation">Code</a></p>
     <li>
@@ -71,7 +71,7 @@ title: Home
 </ul>
 <ul class="c-archives__list">
     <li class="c-archives__item">
-        <p style="color: black;">Sampling, Optimization and Diffusion-based Motion Planning for 2D Navigation<br></p>
+        <p style="color: black;">Sampling, Optimization and Diffusion-Based Motion Planning for 2D Navigation<br></p>
         <p style="font-size:75%;">
             <a href="https://drive.google.com/file/d/15pugl4e622GVE814Wak4dJgszsedWJoi/view?usp=drive_link">PDF</a><span class="v-separate"></span><a href="https://github.com/friolero/cs5478_path_planning/tree/main">Code</a></p>
     <li>
