--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: Home
     <li class="c-archives__item">
     <p style="color: black;">
         Hi, I'm Yuwei, a CS PhD student at National University
-        of Singapore.  My research is motivated by deploying robots into open-ended, 
+        of Singapore, where I'm fortunate to be advised by <a href="https://www.comp.nus.edu.sg/cs/people/xaviercs/">Prof Xavier Bresson</a>.
+        My research is motivated by deploying robots into open-ended, 
         unstructured environments for general and timely assistance. In particular, 
         I'm interested in scalable, adaptive, and reusable robot skill acquisition 
         through low-resource imitation learning and reinforcement learning. 
